fix: agent allowed sudo on specific ops
